# pulsar-playground

./: .gitignore  README.md  build.gradle  settings.gradle
chaos-testing/: .gitignore  README.md
chaos-testing/scenario1/: README.md  conftest.py  k8s_chaos.py  pulsar_admin.py  pulsar_perf.py  pyproject.toml  test_zk_quorum_loss.py
k8s-diagnostics-toolbox/: README.md  jfr_profiling_settings.jfc  k8s-diagnostics-toolbox.sh
microk8s/: README.md  client_broker_pulsar_ns.conf  client_pulsar_ns.conf  pulsar-values.yaml  rebuild.sh  reconfigure_dns.sh  start_microk8s.sh  stop_microk8s.sh  update_microk8s_remote.sh
proxy-tls-issue-repro-2.7.2/: .gitignore  README.md  create_and_delete_function.sh  create_large_functions_jar_file.sh
pulsar-helm-chart-dev/: README.md  client.conf  install_chart.sh  tmux_add_tabs.sh  tmuxp_chart_testing.yaml
test-env/: .gitignore  3_brokers_values.yaml  README.md  adjust_tcp_settings.sh  block_broker.sh  check_kubectx.sh  clean_microk8s_registry.sh  client.conf  client_broker.conf  client_broker_ds.conf  client_default_ns.conf  client_docker_k8s.conf  client_ds.conf  client_local_k8s.conf  client_tls.conf  client_tls_broker.conf  configuration_store.yaml  configure_georep.sh  create_dual_cluster_client_confs.sh  custom_images.yaml  datastax_dev-values.yaml  datastax_images.yaml  datastax_images_ls280_latest.yaml  datastax_k8s_functions.yaml  datastax_tls_and_token_auth.yaml  datastax_token-auth.yaml  delete_deployment.sh  delete_state.sh  dump_georep_topic_stats.sh  functions.yaml  generate_cluster_client_confs.sh  issue22601.yaml  (+33 more)
(+77 files in other folders)
